--- a/index.html
+++ b/index.html
@@ -1,3 +1,149 @@
-<html>
-    
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Certus HTML 2022</title>
+</head>
+<body >
+  <a id="inicio"></a>
+  <h1>Ovnis</h1>
+  <a href="#marca1">Hipervínculo ala Marca 1</a><br>
+  <a href="#marca2">Hipervínculo ala Marca 2</a>
+  
+
+  <h2>Vínculos externos</h2>
+  <a href="rojo.html" target="_blank" title="Haz click" >Ir a la pagina Rojo</a>
+
+
+  <p>Las revelaciones sobre objetos voladores no identificados de la esperada investigación de los servicios de inteligencia de EE.UU
+    Ha sido uno de los informes más esperados en los últimos años de las agencias de inteligencia de EE.UU.Tras una solicitud del Congreso en 2020, el gobierno se comprometió a publicar un reporte sobre la información que tenía sobre avistamientos de objetos voladores no identificados (ovnis), tras varios casos sin explicación que han generado titulares en las últimas dos décadas.
+    A pocos días de su publicación, medios estadounidenses comenzaron a filtrar los detalles del documento.
+    Los que esperaban una respuesta concreta y segura sobre la presencia (o no) de vida proveniente de otros planetas probablemente quedarán frustrados: el documento dice que los analistas de inteligencia no encontraron evidencia de actividad extraterrestre… pero tampoco la descartan.
+    Según indican medios locales, una de las principales conclusiones del documento es que ninguna tecnología estadounidense estuvo involucrada en los más 120 incidentes de avistamientos de objetos extraños reportados en las últimas décadas.</p>
+  <img src="imagenes/imag1.jpg"height="300">
+  <P> Y es que una de las dudas era si los avistamientos eran resultado de programas secretos llevados a cabo por el gobierno de EE.UU.
+    Pero más allá de descartar eso, el informe no hace evaluaciones definitivas sobre cuáles podrían ser los orígenes de tales objetos.
+    ¿A qué se debe el informe?
+    El informe es producto de un grupo de trabajo militar establecido el año pasado para investigar décadas de avistamientos inexplicables en el espacio aéreo de Estados Unidos.
+    El Departamento de Defensa dijo que quería "mejorar su comprensión" de los fenómenos aéreos no identificados y determinar si representaban una amenaza para la seguridad nacional.
+    El reporte fue ordenado como parte de un paquete de ayuda por la pandemia firmado por el entonces presidente Donald Trump.</P>
+ 
+  <p>Paises America del sur</p>
+  <ul type="circle">
+    <li>Perú</li>
+    <li>Colombia</li>
+    <li>Brasil</li>
+  </ul>
+
+  <p>Lista de frutas</p>
+  <ol type="I">
+    <li>Manzanas</li>
+    <li>Peras</li>
+    <li>Uvas</li>
+    <li>Platanos</li>
+  </ol>
+
+<P>Listas  anidadas</P>
+<ol>
+  <li>Bolivia</li>
+      <ol type="a">
+        <li>La Paz</li>
+        <li>Oruro</li> 
+      </ol>
+  <li>Peru</li>
+      <ol type="a">
+        <li>Lima</li>
+        <li>Arequipa</li>
+      </ol>
+ </ol>     
+<p>Lista de deginicion</p>
+ <dl>
+<dt>Brujula</dt>
+    <dd>Señotula montada en una escobula</dd>
+<dt>Oreja</dt>  
+    <dd>Sesenta minutero</dd>
+ </dl>
+<hr>
+
+
+<h1>TABLAS</h1>
+<table border="1">
+    <tr><th>CELDA1</th><th>CELDA2</th></tr>
+    <tr><td>CELDA3</td><td>CELDA4</td></tr>
+    <tr><td><img src="imagenes/imag2.jpg" width="200"></td><td><img src="imagenes/imag3.jpg" width="200"></td></tr>
+</table>
+<hr>
+
+<center>
+<table border="1" bgcolor="orange" width="60%" height="500" >
+  <caption>Esta es mi tabla</caption>
+  <tr>
+    <td colspan="4" align="center">Celda1</td>
+    <!--<td>Celda2</td>
+    <td>Celda3</td>
+    <td>Celda4</td>--> 
+  </tr>
+
+  <tr>
+    <td>Celda5</td>
+    <td rowspan="2">Celda6</td>
+    <td>Celda7</td>
+    <td>Celda8</td>
+  </tr>
+
+  <tr>
+    <td>Celda9</td>
+    <!--<td>Celda10</td> solo se coloca para que no debe existir, sino borra-->
+    <td>Celda11</td>
+    <td rowspan="2"><marquee direction="up" height="100%" >Celda12</marquee></td>
+  </tr>
+
+  <tr>
+    <td>Celda13</td>
+    <td>Celda14</td>
+    <td>Celda15</td>
+    <!--<td>Celda16</td>-->
+  </tr>
+
+
+</table>
+</center>
+<a id="marca1"></a>
+<h1>Marca1</h1> 
+
+<p>
+  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt et perspiciatis excepturi, quia laborum cupiditate non laudantium dolorem eos aliquam mollitia tempora, deleniti explicabo, fugiat quis! Ut qui, temporibus esse quam nihil fuga quasi accusamus laborum ex error vitae distinctio cupiditate voluptate aperiam obcaecati reiciendis! Quia iure itaque reiciendis molestias mollitia modi nulla assumenda sint! Doloribus odio facere dolorem, quod perspiciatis minima delectus totam repudiandae quasi corrupti nihil, sunt ipsa dicta aperiam esse cupiditate! Beatae inventore cum tenetur. Sunt maiores blanditiis obcaecati officiis optio magnam, odit, saepe animi aut aspernatur praesentium deleniti non, quia laborum. Magni quae odio omnis sequi.
+
+</p>
+<p>
+  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt et perspiciatis excepturi, quia laborum cupiditate non laudantium dolorem eos aliquam mollitia tempora, deleniti explicabo, fugiat quis! Ut qui, temporibus esse quam nihil fuga quasi accusamus laborum ex error vitae distinctio cupiditate voluptate aperiam obcaecati reiciendis! Quia iure itaque reiciendis molestias mollitia modi nulla assumenda sint! Doloribus odio facere dolorem, quod perspiciatis minima delectus totam repudiandae quasi corrupti nihil, sunt ipsa dicta aperiam esse cupiditate! Beatae inventore cum tenetur. Sunt maiores blanditiis obcaecati officiis optio magnam, odit, saepe animi aut aspernatur praesentium deleniti non, quia laborum. Magni quae odio omnis sequi.
+
+</p>
+<p>
+  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt et perspiciatis excepturi, quia laborum cupiditate non laudantium dolorem eos aliquam mollitia tempora, deleniti explicabo, fugiat quis! Ut qui, temporibus esse quam nihil fuga quasi accusamus laborum ex error vitae distinctio cupiditate voluptate aperiam obcaecati reiciendis! Quia iure itaque reiciendis molestias mollitia modi nulla assumenda sint! Doloribus odio facere dolorem, quod perspiciatis minima delectus totam repudiandae quasi corrupti nihil, sunt ipsa dicta aperiam esse cupiditate! Beatae inventore cum tenetur. Sunt maiores blanditiis obcaecati officiis optio magnam, odit, saepe animi aut aspernatur praesentium deleniti non, quia laborum. Magni quae odio omnis sequi.
+
+</p>
+
+<a href="#inicio"> <img src="imagenes/boton atras.gif" width="80"></a>
+<a id="marca2"></a> 
+<h1>Marca2</h1>
+<p>
+  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt et perspiciatis excepturi, quia laborum cupiditate non laudantium dolorem eos aliquam mollitia tempora, deleniti explicabo, fugiat quis! Ut qui, temporibus esse quam nihil fuga quasi accusamus laborum ex error vitae distinctio cupiditate voluptate aperiam obcaecati reiciendis! Quia iure itaque reiciendis molestias mollitia modi nulla assumenda sint! Doloribus odio facere dolorem, quod perspiciatis minima delectus totam repudiandae quasi corrupti nihil, sunt ipsa dicta aperiam esse cupiditate! Beatae inventore cum tenetur. Sunt maiores blanditiis obcaecati officiis optio magnam, odit, saepe animi aut aspernatur praesentium deleniti non, quia laborum. Magni quae odio omnis sequi.
+
+</p>
+<p>
+  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt et perspiciatis excepturi, quia laborum cupiditate non laudantium dolorem eos aliquam mollitia tempora, deleniti explicabo, fugiat quis! Ut qui, temporibus esse quam nihil fuga quasi accusamus laborum ex error vitae distinctio cupiditate voluptate aperiam obcaecati reiciendis! Quia iure itaque reiciendis molestias mollitia modi nulla assumenda sint! Doloribus odio facere dolorem, quod perspiciatis minima delectus totam repudiandae quasi corrupti nihil, sunt ipsa dicta aperiam esse cupiditate! Beatae inventore cum tenetur. Sunt maiores blanditiis obcaecati officiis optio magnam, odit, saepe animi aut aspernatur praesentium deleniti non, quia laborum. Magni quae odio omnis sequi.
+
+</p>
+<p>
+  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt et perspiciatis excepturi, quia laborum cupiditate non laudantium dolorem eos aliquam mollitia tempora, deleniti explicabo, fugiat quis! Ut qui, temporibus esse quam nihil fuga quasi accusamus laborum ex error vitae distinctio cupiditate voluptate aperiam obcaecati reiciendis! Quia iure itaque reiciendis molestias mollitia modi nulla assumenda sint! Doloribus odio facere dolorem, quod perspiciatis minima delectus totam repudiandae quasi corrupti nihil, sunt ipsa dicta aperiam esse cupiditate! Beatae inventore cum tenetur. Sunt maiores blanditiis obcaecati officiis optio magnam, odit, saepe animi aut aspernatur praesentium deleniti non, quia laborum. Magni quae odio omnis sequi.
+
+</p>
+
+
+
+
+</body>
 </html>
