--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Certus HTML 2022</title>
 </head>
-<body >
+<body>
   <a id="inicio"></a>
   <h1>Ovnis</h1>
   <a href="#marca1">Hipervínculo ala Marca 1</a><br>
@@ -14,7 +14,7 @@
   
 
   <h2>Vínculos externos</h2>
-  <a href="rojo.html" target="_blank" title="Haz click" >Ir a la pagina Rojo</a>
+  <a href="rojo.html" target="_self" title="Haz click" >Ir a la pagina Rojo</a>
 
 
   <p>Las revelaciones sobre objetos voladores no identificados de la esperada investigación de los servicios de inteligencia de EE.UU
@@ -110,6 +110,7 @@
 
 </table>
 </center>
+<a href="#inicio"> <img src="imagenes/boton atras.gif" width="80"></a>
 <a id="marca1"></a>
 <h1>Marca1</h1> 
 
